tests/agl/rejections/match/redundant_duplicate.agl
let value = 1
case value of
  | 1 => ()
  | 1 => ()
  | _ => ()
